--- a/vercel.json
+++ b/vercel.json
@@ -7,18 +7,20 @@
     },
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/dist" }
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
     {
-      "src": "/backend/(.*)",
+      "src": "/api/(.*)",
       "dest": "backend/index.js"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "frontend/dist/index.html"
+      "dest": "/index.html"
     }
   ]
 }
